Make benchmark and examples optional + fix windows compilation

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,1 +1,3 @@
 option('tests', type : 'boolean', value : false, description : 'Build the tests')
+option('examples', type : 'boolean', value : false, description : 'Build the examples')
+option('benchmarks', type : 'boolean', value : false, description : 'Build the benchmarks')
