Simplify code slightly by updating C++ standard and deps

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,17 @@
+# vim
 *.swp
 .exrc
 
-build*/
+# test files
 *.bmp
+
+# clangd cache
+.cache
+
+# tooling
+/compile_commands.json
+
+# wraps
+/subprojects/*
+!/subprojects/doctest.wrap
+
